@@ -167,6 +167,7 @@ __ZN7WebCore11FrameLoader26saveDocumentAndScrollStateEv
 __ZN7WebCore11FrameLoader33loadFrameRequestWithFormAndValuesERKNS_16FrameLoadRequestEbbPNS_5EventEPNS_15HTMLFormElementERKN3WTF7HashMapINS_6StringESA_NS_10StringHashENS8_10HashTraitsISA_EESD_EE
 __ZN7WebCore11FrameLoader36saveScrollPositionAndViewStateToItemEPNS_11HistoryItemE
 __ZN7WebCore11FrameLoader4loadERKNS_15ResourceRequestERKNS_14SubstituteDataEb
+__ZN7WebCore11FrameLoader4loadERKNS_15ResourceRequestERKNS_6StringEb
 __ZN7WebCore11FrameLoader4loadERKNS_15ResourceRequestEb
 __ZN7WebCore11FrameLoader6reloadEb
 __ZN7WebCore11FrameLoader7addDataEPKci
@@ -213,6 +214,7 @@ __ZN7WebCore12EventHandler10wheelEventEP7NSEvent
 __ZN7WebCore12EventHandler12mouseDraggedEP7NSEvent
 __ZN7WebCore12EventHandler14currentNSEventEv
 __ZN7WebCore12EventHandler14scrollOverflowENS_15ScrollDirectionENS_17ScrollGranularityE
+__ZN7WebCore12EventHandler15sendScrollEventEv
 __ZN7WebCore12EventHandler17dragSourceEndedAtERKNS_18PlatformMouseEventENS_13DragOperationE
 __ZN7WebCore12EventHandler17dragSourceMovedToERKNS_18PlatformMouseEventE
 __ZN7WebCore12EventHandler20handleTextInputEventERKNS_6StringEPNS_5EventEbb
@@ -224,7 +226,6 @@ __ZN7WebCore12EventHandler7mouseUpEP7NSEvent
 __ZN7WebCore12EventHandler8keyEventEP7NSEvent
 __ZN7WebCore12EventHandler8keyEventERKNS_21PlatformKeyboardEventE
 __ZN7WebCore12EventHandler9mouseDownEP7NSEvent
-__ZN7WebCore12EventHandler15sendScrollEventEv
 __ZN7WebCore12GCController17garbageCollectNowEv
 __ZN7WebCore12GCController43garbageCollectOnAlternateThreadForDebuggingEb
 __ZN7WebCore12IconDatabase10setEnabledEb
@@ -622,21 +623,21 @@ __ZN7WebCore9FontCache21purgeInactiveFontDataEi
 __ZN7WebCore9FrameTree11appendChildEN3WTF10PassRefPtrINS_5FrameEEE
 __ZN7WebCore9FrameTree7setNameERKNS_12AtomicStringE
 __ZN7WebCore9FrameTree9clearNameEv
+__ZN7WebCore9FrameView11forceLayoutEb
 __ZN7WebCore9FrameView12setMediaTypeERKNS_6StringE
 __ZN7WebCore9FrameView14adjustViewSizeEv
 __ZN7WebCore9FrameView14initScrollbarsEv
 __ZN7WebCore9FrameView14setMarginWidthEi
 __ZN7WebCore9FrameView14setTransparentEb
 __ZN7WebCore9FrameView15setMarginHeightEi
+__ZN7WebCore9FrameView16adjustPageHeightEPffff
 __ZN7WebCore9FrameView18updateControlTintsEv
 __ZN7WebCore9FrameView22setBaseBackgroundColorENS_5ColorE
 __ZN7WebCore9FrameView23layoutIfNeededRecursiveEv
+__ZN7WebCore9FrameView29forceLayoutWithPageWidthRangeEffb
 __ZN7WebCore9FrameView29setShouldUpdateWhileOffscreenEb
 __ZN7WebCore9FrameViewC1EPNS_5FrameE
 __ZN7WebCore9FrameViewC1EPNS_5FrameERKNS_7IntSizeE
-__ZN7WebCore9FrameView16adjustPageHeightEPffff
-__ZN7WebCore9FrameView29forceLayoutWithPageWidthRangeEffb
-__ZN7WebCore9FrameView11forceLayoutEb
 __ZN7WebCore9HTMLNames10listingTagE
 __ZN7WebCore9HTMLNames13blockquoteTagE
 __ZN7WebCore9HTMLNames4aTagE
@@ -877,12 +878,12 @@ __ZNK7WebCore6StringcvN3JSC7UStringEEv
 __ZNK7WebCore6Widget9frameRectEv
 __ZNK7WebCore7Element12getAttributeERKNS_13QualifiedNameE
 __ZNK7WebCore7IntRectcv7_NSRectEv
+__ZNK7WebCore8Document10isFrameSetEv
 __ZNK7WebCore8Document11completeURLERKNS_6StringE
 __ZNK7WebCore8Document13axObjectCacheEv
 __ZNK7WebCore8Document20cacheDocumentElementEv
-__ZNK7WebCore8Document6domainEv
 __ZNK7WebCore8Document4bodyEv
-__ZNK7WebCore8Document10isFrameSetEv
+__ZNK7WebCore8Document6domainEv
 __ZNK7WebCore8IntPointcv8_NSPointEv
 __ZNK7WebCore8Position10downstreamEv
 __ZNK7WebCore8Position25leadingWhitespacePositionENS_9EAffinityEb
