@@ -335,7 +335,7 @@ static void cancelOutstandingCheck(const void *item, void *context)
             LOG_ERROR("could not load URL %@", [request URL]);
             return;
         }
-        core(frame)->loader()->load(request, target);
+        core(frame)->loader()->load(request, target, false);
     }
 }
 
